Replace historical System.out/err weirdness with proper logging everywhere (and separate reporting functionality in BatchGrader)